--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
   <main>
     <head>
-        <h1>Título do Site</h1>
+        <h1>Gursos Grátis</h1>
     </head>
     <article>
-        <h2>Artigo 001</h2>
-        <p>Texto Artigo 001</p>
+        <h2>Curso de HTML5 com CSS3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, id eaque. Totam saepe laborum, molestias explicabo aperiam blanditiis maxime esse maiores ad fugit, voluptatem quia, aut tempora quaerat ea at!</p>
     </article>
     <article>
-        <h2>Artigo 002</h2>
-        <p>Texto Artigo 002</p>
+        <h2>Curso de JavaScript</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur exercitationem numquam quisquam dolorum cumque possimus temporibus necessitatibus, earum in voluptatum omnis eius minima. Exercitationem pariatur aperiam nostrum magni sequi quo!</p>
     </article>
   </main>  
 </body>
